--- a/template_controller_msgs/CMakeLists.txt
+++ b/template_controller_msgs/CMakeLists.txt
@@ -13,10 +13,11 @@ find_package(catkin REQUIRED COMPONENTS
 ################################################
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
-  TemplateData.msg
- )
+# add_message_files(
+#   FILES
+#   Message1.msg
+#   Message2.msg
+# )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
