--- a/template_controller_rtc/CMakeLists.txt
+++ b/template_controller_rtc/CMakeLists.txt
@@ -6,20 +6,20 @@ set(CMAKE_BUILD_TYPE Release)
 cmake_policy(SET CMP0046 OLD)
 
 find_package(catkin REQUIRED COMPONENTS
-  rtmbuild
+  rtmbuild2
   roscpp
   )
 
-rtmbuild_init()
+rtmbuild2_init()
 
 catkin_package(
   LIBRARIES TemplateControllerServiceSkel TemplateControllerServiceStub
   )
 
 # generate idl
-rtmbuild_genidl()
+rtmbuild2_genidl()
 
 # generate bridge
-rtmbuild_genbridge()
+rtmbuild2_genbridge()
 
 add_subdirectory(rtc)
