--- a/template_controller_rtc/rtc/TemplateController/CMakeLists.txt
+++ b/template_controller_rtc/rtc/TemplateController/CMakeLists.txt
@@ -1,22 +1,25 @@
 add_definitions(-Wno-deprecated)
 
 find_package(catkin REQUIRED COMPONENTS
-  rtmbuild
+  rtmbuild2
   template_controller_msgs
   )
 include_directories(
   ${catkin_INCLUDE_DIRS}
+  ${openrtm_aist_INCLUDE_DIRS}
   )
-    
-rtmbuild_add_library(TemplateController SHARED
+
+add_library(TemplateController SHARED
   TemplateController.cpp
   TemplateControllerService_impl.cpp
   )
 target_link_libraries(TemplateController
   ${catkin_LIBRARIES}
+  ${openrtm_aist_LIBRARIES}
+  ${${PROJECT_NAME}_IDLLIBRARY_DIRS}
   )
-set_target_properties(TemplateController PROPERTIES PREFIX "") # libTemplateController.so -> TemplateController.so                                                                           
-add_dependencies(TemplateController RTMBUILD_${PROJECT_NAME}_genrpc) # wait for rtmbuild_genidl                                                                                                        
+set_target_properties(TemplateController PROPERTIES PREFIX "") # libTemplateController.so -> TemplateController.so
+add_dependencies(TemplateController RTMBUILD2_${PROJECT_NAME}_genrpc) # wait for rtmbuild2_genidl
 
-rtmbuild_add_executable(TemplateControllerComp TemplateControllerComp.cpp)
+add_executable(TemplateControllerComp TemplateControllerComp.cpp)
 target_link_libraries(TemplateControllerComp TemplateController)
