--- a/template_controller_rtc/package.xml
+++ b/template_controller_rtc/package.xml
@@ -10,7 +10,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>rtmbuild</depend>
+  <depend>rtmbuild2</depend>
   <depend>template_controller_msgs</depend>
 
 </package>
